unpackaged/main/default/objects/WorkOrder/fields/Referenced_supplier__c.field-meta.xml
<CustomField>
    <fullName>Referenced_supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referenced supplier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Compte Fournisseur</value>
        </filterItems>
        <filterItems>
            <field>Account.PaysExploitation__c</field>
            <operation>equals</operation>
            <value>ROYAUME UNI</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ordres de Travail (Referenced supplier)</relationshipLabel>
    <relationshipName>Ordres_de_Travail1</relationshipName>
    <type>Lookup</type>
</CustomField>