unpackaged/main/default/objects/WorkOrder/fields/Ressource_Interne__c.field-meta.xml
<CustomField>
    <fullName>Ressource_Interne__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ressource Interne</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ServiceResource.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Vous devez choisir une ressource active.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Ordres de Travail</relationshipLabel>
    <relationshipName>Ordres_de_Travail</relationshipName>
    <type>Lookup</type>
</CustomField>