unpackaged/main/default/objects/WorkOrder/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <formula>if
(
OR(
$User.ProfileId == $Label.USR_ProfileId_PFCommunityPlusSiteAccount,
$User.ProfileId == $Label.USR_ProfileId_PFCommunityPlusUltimateAccount,
$User.ProfileId == $Label.USR_ProfileId_PFCommunityPlusClientAccount)
,
IF
(ISPICKVAL(Status,&quot;Nouveau&quot;),IMAGE(&quot;/client/resource/1554898927000/Case_Nouvelle_V2?&quot;,&quot;Nouvelle&quot;,20,130),
IF
(ISPICKVAL(Status,&quot;En cours&quot;),IMAGE(&quot;/client/resource/1555660884000/Case_EnCours_V2?&quot;,&quot;Encours&quot;,20,130),
IF
(ISPICKVAL(Status,&quot;Terminé&quot;),IMAGE(&quot;/client/resource/1555660944000/Case_Ferme_V2?&quot;,&quot;terminé&quot;,20,130),
IF
(ISPICKVAL(Status,&quot;À replanifier&quot;),IMAGE(&quot;/client/resource/1615383328000/Case_Ferme_Orange&quot;,&quot;Orange&quot;,20,130),&#39;&#39;))))
,

IF
(ISPICKVAL(Status,&quot;Nouveau&quot;),IMAGE(&quot;/resource/1554898927000/Case_Nouvelle_V2?&quot;,&quot;Nouvelle&quot;,20,130),
IF
(ISPICKVAL(Status,&quot;En cours&quot;),IMAGE(&quot;/resource/1555660884000/Case_EnCours_V2?&quot;,&quot;Encours&quot;,20,130),
IF
(ISPICKVAL(Status,&quot;Terminé&quot;),IMAGE(&quot;/resource/1555660944000/Case_Ferme_V2?&quot;,&quot;terminé&quot;,20,130),
IF
(ISPICKVAL(Status,&quot;À replanifier&quot;),IMAGE(&quot;/resource/1615383328000/Case_Ferme_Orange&quot;,&quot;Orange&quot;,20,130),&#39;&#39;))))
)</formula>
    <label>Statut</label>
    <type>Text</type>
</CustomField>