unpackaged/main/default/objects/WorkOrder/fields/Statut_Depannage__c.field-meta.xml
<CustomField>
    <fullName>Statut_Depannage__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Terminé</fullName>
            </value>
            <value>
                <fullName>Annulé</fullName>
            </value>
            <value>
                <fullName>Provisoire</fullName>
            </value>
            <value>
                <fullName>Non abouti</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>