unpackaged/main/default/objects/WorkOrder/fields/TECH_AG__c.field-meta.xml
<CustomField>
    <fullName>TECH_AG__c</fullName>
    <description>True Si Liste agences utilisateur contient l&#39;agence intervenante de l&#39;OT</description>
    <formula>IF 
( 
Contains( $User.Liste_Agences__c , Agence_Intervenante__r.Name ) 
, 
TRUE 
, 
FALSE 
)</formula>
    <label>TECH_AG</label>
    <type>Checkbox</type>
</CustomField>