unpackaged/main/default/objects/WorkOrder/fields/TECH_AgenceIntervenante_Name__c.field-meta.xml
<CustomField>
    <fullName>TECH_AgenceIntervenante_Name__c</fullName>
    <formula>Agence_Intervenante__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_AgenceIntervenante_Name</label>
    <type>Text</type>
</CustomField>