unpackaged/main/default/objects/WorkOrder/fields/TECH_AgenceIntervenante_Tel__c.field-meta.xml
<CustomField>
    <fullName>TECH_AgenceIntervenante_Tel__c</fullName>
    <formula>Agence_Intervenante__r.phone_Agence__c</formula>
    <label>TECH_AgenceIntervenante_Tel</label>
    <type>Text</type>
</CustomField>