unpackaged/main/default/objects/WorkOrder/fields/TECH_Arrivee__c.field-meta.xml
<CustomField>
    <fullName>TECH_Arrivee__c</fullName>
    <label>TECH_Arrivee</label>
    <summaryFilterItems>
        <field>WorkOrderLineItem.RecordTypeId</field>
        <operation>equals</operation>
        <value>Arrivée sur place</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Status</field>
        <operation>equals</operation>
        <value>Réalisé</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>