unpackaged/main/default/objects/WorkOrder/fields/TECH_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>TECH_Case_Number__c</fullName>
    <formula>Case.CaseNumber</formula>
    <label>TECH_Case_Number</label>
    <type>Text</type>
</CustomField>