unpackaged/main/default/objects/WorkOrder/fields/TECH_Depart__c.field-meta.xml
<CustomField>
    <fullName>TECH_Depart__c</fullName>
    <label>TECH_Depart</label>
    <summaryFilterItems>
        <field>WorkOrderLineItem.RecordTypeId</field>
        <operation>equals</operation>
        <value>Départ Intervention</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Status</field>
        <operation>equals</operation>
        <value>Réalisé</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>