unpackaged/main/default/objects/WorkOrder/fields/TECH_Email_Agence_ParcAssistance__c.field-meta.xml
<CustomField>
    <fullName>TECH_Email_Agence_ParcAssistance__c</fullName>
    <label>TECH_Email_Agence_ParcAssistance</label>
    <type>Email</type>
</CustomField>