unpackaged/main/default/objects/WorkOrder/fields/TECH_Email_Agence_ParcRelais__c.field-meta.xml
<CustomField>
    <fullName>TECH_Email_Agence_ParcRelais__c</fullName>
    <label>TECH_Email_Agence_ParcRelais</label>
    <type>Email</type>
</CustomField>