unpackaged/main/default/objects/WorkOrder/fields/TECH_MERGE_Observations__c.field-meta.xml
<CustomField>
    <fullName>TECH_MERGE_Observations__c</fullName>
    <label>Observations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>