unpackaged/main/default/objects/WorkOrder/fields/TECH_Missions_Done__c.field-meta.xml
<CustomField>
    <fullName>TECH_Missions_Done__c</fullName>
    <description>Nb missions effectuées</description>
    <label>TECH_Missions_Done</label>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Status</field>
        <operation>equals</operation>
        <value>Réalisé</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>