unpackaged/main/default/objects/WorkOrder/fields/TECH_Nb_Missions_All__c.field-meta.xml
<CustomField>
    <fullName>TECH_Nb_Missions_All__c</fullName>
    <description>Nombre total des missions</description>
    <label>TECH_Nb_Missions_All</label>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>