unpackaged/main/default/objects/WorkOrder/fields/TECH_Nb_Missions_Fermees__c.field-meta.xml
<CustomField>
    <fullName>TECH_Nb_Missions_Fermees__c</fullName>
    <description>Nombre de missions fermées</description>
    <label>TECH Nb Missions Fermées</label>
    <summaryFilterItems>
        <field>WorkOrderLineItem.IsClosed</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>