unpackaged/main/default/objects/WorkOrder/fields/TECH_Nb_Missions_Open__c.field-meta.xml
<CustomField>
    <fullName>TECH_Nb_Missions_Open__c</fullName>
    <description>Le nombre des missions en cours
Use:Flux clôture mission</description>
    <label>TECH Nb Missions Open</label>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Status</field>
        <operation>equals</operation>
        <value>A faire</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>