unpackaged/main/default/objects/WorkOrder/fields/TECH_Notif_Parc_Relais_Sent__c.field-meta.xml
<CustomField>
    <fullName>TECH_Notif_Parc_Relais_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_Notif_Parc_Relais_Sent</label>
    <type>Checkbox</type>
</CustomField>