unpackaged/main/default/objects/WorkOrder/fields/TECH_Parc_Agence__c.field-meta.xml
<CustomField>
    <fullName>TECH_Parc_Agence__c</fullName>
    <formula>Asset.Agence__r.Name</formula>
    <label>TECH_Parc_Agence</label>
    <type>Text</type>
</CustomField>