unpackaged/main/default/objects/WorkOrder/fields/TECH_Parc_IMMAT__c.field-meta.xml
<CustomField>
    <fullName>TECH_Parc_IMMAT__c</fullName>
    <formula>Asset.IMMAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Parc_IMMAT</label>
    <type>Text</type>
</CustomField>