unpackaged/main/default/objects/WorkOrder/fields/TECH_Parc_NSerie__c.field-meta.xml
<CustomField>
    <fullName>TECH_Parc_NSerie__c</fullName>
    <formula>Asset.SerialNumber</formula>
    <label>TECH_Parc_NSerie</label>
    <type>Text</type>
</CustomField>