unpackaged/main/default/objects/WorkOrder/fields/TECH_ParcAssistance_Name__c.field-meta.xml
<CustomField>
    <fullName>TECH_ParcAssistance_Name__c</fullName>
    <formula>Parc_Assistance__r.Name</formula>
    <label>TECH_ParcAssistance_Name</label>
    <type>Text</type>
</CustomField>