unpackaged/main/default/objects/WorkOrder/fields/TECH_ParcRelais_Name__c.field-meta.xml
<CustomField>
    <fullName>TECH_ParcRelais_Name__c</fullName>
    <formula>Parc_Relais__r.Name</formula>
    <label>TECH_ParcRelais_Name</label>
    <type>Text</type>
</CustomField>