unpackaged/main/default/objects/WorkOrder/fields/TECH_PF_AGENCES__c.field-meta.xml
<CustomField>
    <fullName>TECH_PF_AGENCES__c</fullName>
    <description>User.ListeAgences = Agence intervenante.code</description>
    <formula>if
(
AND
(
contains($User.Liste_Agences__c,  Agence_Intervenante__r.Code__c) 
,
NOT(ISBLANK($User.Liste_Agences__c))
,
NOT(ISBLANK(Agence_Intervenante__c))
)
,
TRUE
,
FALSE
)</formula>
    <label>TECH_PF_AGENCES</label>
    <type>Checkbox</type>
</CustomField>