unpackaged/main/default/objects/WorkOrder/fields/TECH_PF_REGION__c.field-meta.xml
<CustomField>
    <fullName>TECH_PF_REGION__c</fullName>
    <description>user.PF_Region = Agence intervenante.region</description>
    <formula>if
(
AND
(
contains($User.PF_Region__c, text(Agence_Intervenante__r.Region__c)) 
,
NOT(ISBLANK($User.PF_Region__c))
,
NOT(ISBLANK(text(Agence_Intervenante__r.Region__c)))
)
,
true
,
FALSE
)</formula>
    <label>TECH_PF_REGION</label>
    <type>Checkbox</type>
</CustomField>