unpackaged/main/default/objects/WorkOrder/fields/TECH_REPORT_DocumentsAdm__c.field-meta.xml
<CustomField>
    <fullName>TECH_REPORT_DocumentsAdm__c</fullName>
    <label>Documents administratifs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>