unpackaged/main/default/objects/WorkOrder/fields/TECH_REPORT_EclairageBatterie__c.field-meta.xml
<CustomField>
    <fullName>TECH_REPORT_EclairageBatterie__c</fullName>
    <label>Eclairage / Batterie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>