unpackaged/main/default/objects/WorkOrder/fields/TECH_REPORT_MERGE_FIELDS__c.field-meta.xml
<CustomField>
    <fullName>TECH_REPORT_MERGE_FIELDS__c</fullName>
    <formula>N_Parc__c + &quot; / &quot; + Nom_du_technicien__c + &quot; / &quot; +  Text(Km_constat__c) + &quot; / &quot; +  TEXT(heures_frigo_constatees__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parc/Technicien/Km Constaté/Heures Frigo</label>
    <type>Text</type>
</CustomField>