unpackaged/main/default/objects/WorkOrder/fields/TECH_REPORT_MOTEUR__c.field-meta.xml
<CustomField>
    <fullName>TECH_REPORT_MOTEUR__c</fullName>
    <label>Moteur / Boite / Pont</label>
    <length>255</length>
    <type>Text</type>
</CustomField>