unpackaged/main/default/objects/WorkOrder/fields/TECH_REPORT_Preventif__c.field-meta.xml
<CustomField>
    <fullName>TECH_REPORT_Preventif__c</fullName>
    <label>Préventif à prévoir</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>