unpackaged/main/default/objects/WorkOrder/fields/TECH_Retour_Created__c.field-meta.xml
<CustomField>
    <fullName>TECH_Retour_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag pour eviter de créer deux missions retour</description>
    <label>TECH_Retour_Created</label>
    <type>Checkbox</type>
</CustomField>