unpackaged/main/default/objects/WorkOrder/fields/TECH_Rg__c.field-meta.xml
<CustomField>
    <fullName>TECH_Rg__c</fullName>
    <description>True si le champ Case.Agence_intervenante.Terrotoire == User.Division 
Utilisation : Vue de liste pour filtrer sur les requêtes de la région utilisateur</description>
    <formula>if 
( 
AND 
( 
$User.Division == TEXT(Agence_Intervenante__r.Territoire__c ) , 
NOT(ISBLANK($User.Division)), 
NOT(ISBLANK(TEXT(Agence_Intervenante__r.Territoire__c))) 
) 
, 
true 
, 
false 
)</formula>
    <label>TECH_Rg</label>
    <type>Checkbox</type>
</CustomField>