unpackaged/main/default/objects/WorkOrder/fields/TECH_Transmission__c.field-meta.xml
<CustomField>
    <fullName>TECH_Transmission__c</fullName>
    <description>Coché si la mission est clôturée</description>
    <label>TECH_Transmission</label>
    <summaryFilterItems>
        <field>WorkOrderLineItem.RecordTypeId</field>
        <operation>equals</operation>
        <value>Transmission Appel</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Status</field>
        <operation>equals</operation>
        <value>Réalisé</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>