unpackaged/main/default/objects/WorkOrder/fields/Tel_Astreinte__c.field-meta.xml
<CustomField>
    <fullName>Tel_Astreinte__c</fullName>
    <label>Tel Astreinte</label>
    <type>Phone</type>
</CustomField>