unpackaged/main/default/objects/WorkOrder/fields/Travaux_demandes__c.field-meta.xml
<CustomField>
    <fullName>Travaux_demandes__c</fullName>
    <label>Travaux demandés</label>
    <type>TextArea</type>
</CustomField>