unpackaged/main/default/objects/WorkOrder/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boite de vitesse</fullName>
            </value>
            <value>
                <fullName>Cabine</fullName>
            </value>
            <value>
                <fullName>Carrosserie/Cellule Isotherme</fullName>
            </value>
            <value>
                <fullName>Châssis</fullName>
            </value>
            <value>
                <fullName>Mauvaise Utilisation</fullName>
            </value>
            <value>
                <fullName>Electricité Véhicule</fullName>
            </value>
            <value>
                <fullName>Freinage</fullName>
            </value>
            <value>
                <fullName>Groupe Froid</fullName>
            </value>
            <value>
                <fullName>Hayon/Portique</fullName>
            </value>
            <value>
                <fullName>Moteur</fullName>
            </value>
            <value>
                <fullName>Panne Carburant / Fluide</fullName>
            </value>
            <value>
                <fullName>Pneumatiques</fullName>
            </value>
            <value>
                <fullName>Pont/Essieu/Transmission</fullName>
            </value>
            <value>
                <fullName>Sinistre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>