unpackaged/main/default/objects/WorkOrder/fields/type_OE__c.field-meta.xml
<CustomField>
    <fullName>type_OE__c</fullName>
    <description>type picklist</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Origine__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Boite de vitesse</fullName>
            </value>
            <value>
                <fullName>Cabine</fullName>
            </value>
            <value>
                <fullName>Carrosserie/Cellule Isotherme</fullName>
            </value>
            <value>
                <fullName>Châssis</fullName>
            </value>
            <value>
                <fullName>Mauvaise Utilisation / Négligence</fullName>
            </value>
            <value>
                <fullName>Electricité Véhicule</fullName>
            </value>
            <value>
                <fullName>Freinage</fullName>
            </value>
            <value>
                <fullName>Groupe Froid</fullName>
            </value>
            <value>
                <fullName>Hayon/Portique</fullName>
            </value>
            <value>
                <fullName>Moteur</fullName>
            </value>
            <value>
                <fullName>Pneumatiques</fullName>
            </value>
            <value>
                <fullName>Pont/Essieu/Transmission</fullName>
            </value>
            <value>
                <fullName>Sinistre / Dégâts</fullName>
            </value>
            <value>
                <fullName>Caisse</fullName>
            </value>
            <value>
                <fullName>Electricité</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>