unpackaged/main/default/objects/WorkOrder/fields/Warranty_Recharge__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Recharge__c</fullName>
    <description>picklist specified for UK users,</description>
    <label>Warranty/Recharge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Recharge</fullName>
            </value>
            <value>
                <fullName>No recharge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>