unpackaged/main/default/objects/WorkOrder/recordTypes/Demande_de_service.recordType-meta.xml
<RecordType>
    <fullName>Demande_de_service</fullName>
    <active>true</active>
    <label>Demande de service</label>
</RecordType>