unpackaged/main/default/objects/WorkOrder/recordTypes/Depannage.recordType-meta.xml
<RecordType>
    <fullName>Depannage</fullName>
    <active>true</active>
    <description>Ordre de travail de type Depannage</description>
    <label>Depannage</label>
</RecordType>