unpackaged/main/default/objects/WorkOrder/recordTypes/Depannage_Container_Lecture_Seule.recordType-meta.xml
<RecordType>
    <fullName>Depannage_Container_Lecture_Seule</fullName>
    <active>true</active>
    <label>Depannage Container - Lecture Seule</label>
</RecordType>