unpackaged/main/default/objects/WorkOrder/recordTypes/Depannage_Containers.recordType-meta.xml
<RecordType>
    <fullName>Depannage_Containers</fullName>
    <active>true</active>
    <label>Dépannage - Containers</label>
</RecordType>