unpackaged/main/default/objects/WorkOrder/recordTypes/Depannage_Lecture_Seule.recordType-meta.xml
<RecordType>
    <fullName>Depannage_Lecture_Seule</fullName>
    <active>true</active>
    <label>Depannage - Lecture Seule</label>
</RecordType>