unpackaged/main/default/objects/WorkOrder/recordTypes/Depannage_Vehicule.recordType-meta.xml
<RecordType>
    <fullName>Depannage_Vehicule</fullName>
    <active>true</active>
    <label>Depannage - Véhicule</label>
</RecordType>