unpackaged/main/default/objects/WorkOrder/recordTypes/Depannage_vehicule_Lecture_Seule.recordType-meta.xml
<RecordType>
    <fullName>Depannage_vehicule_Lecture_Seule</fullName>
    <active>true</active>
    <label>Depannage véhicule - Lecture Seule</label>
</RecordType>