unpackaged/main/default/objects/WorkOrder/recordTypes/Ordre_Reparation.recordType-meta.xml
<RecordType>
    <fullName>Ordre_Reparation</fullName>
    <active>true</active>
    <label>Ordre de réparation</label>
</RecordType>