unpackaged/main/default/objects/WorkOrder/recordTypes/Principal.recordType-meta.xml
<RecordType>
    <fullName>Principal</fullName>
    <active>true</active>
    <label>Principal</label>
</RecordType>