unpackaged/main/default/objects/WorkOrder/recordTypes/Tour_de_parc.recordType-meta.xml
<RecordType>
    <fullName>Tour_de_parc</fullName>
    <active>true</active>
    <label>Tour de parc</label>
</RecordType>