unpackaged/main/default/objects/WorkOrder/recordTypes/Tour_de_parc_Chapeau.recordType-meta.xml
<RecordType>
    <fullName>Tour_de_parc_Chapeau</fullName>
    <active>true</active>
    <label>Tour de parc - Chapeau</label>
</RecordType>