unpackaged/main/default/objects/WorkOrder/recordTypes/Tour_de_parc_Lecture_Seule.recordType-meta.xml
<RecordType>
    <fullName>Tour_de_parc_Lecture_Seule</fullName>
    <active>true</active>
    <label>Tour de parc - Lecture Seule</label>
</RecordType>