unpackaged/main/default/objects/WorkOrder/validationRules/Moon_02_OT_Parc_Assistance_Relais.validationRule-meta.xml
<ValidationRule>
    <fullName>Moon_02_OT_Parc_Assistance_Relais</fullName>
    <active>true</active>
    <description>Le parc de l&#39;OT doit être différent du parc assistance et relais</description>
    <errorConditionFormula>AND( 
OR 
( 
AND( Asset.Id == Parc_Assistance__c,NOT(ISBLANK(Parc_Assistance__c) )) 
, 
AND(Asset.Id == Parc_Relais__c ,NOT(ISBLANK(Parc_Relais__c ))) 

) 
, 
$Setup.Bypass__c.BypassValidationRules__c = false 


)</errorConditionFormula>
    <errorDisplayField>AssetId</errorDisplayField>
    <errorMessage>Le parc assistance / relais ne peut pas être identique au véhicule en panne</errorMessage>
</ValidationRule>