unpackaged/main/default/objects/WorkOrder/validationRules/VR02_Adresse.validationRule-meta.xml
<ValidationRule>
    <fullName>VR02_Adresse</fullName>
    <active>true</active>
    <description>Adresse obligatoire si lieu d&#39;intervention = &quot;Autre&quot;</description>
    <errorConditionFormula>AND(
NOT(ISBLANK( Ressource_Interne__c )),
TEXT(Lieu_Intervention__c) = &#39;Autre adresse&#39;,
OR((ISBLANK( Street)),
(ISBLANK( City)),
(ISBLANK( PostalCode)),
(ISBLANK( Country))
))</errorConditionFormula>
    <errorDisplayField>Street</errorDisplayField>
    <errorMessage>Vous devez renseigner l&#39;adresse si le lieu d&#39;intervention est &quot;Autre adresse&quot;</errorMessage>
</ValidationRule>