unpackaged/main/default/objects/WorkOrder/validationRules/VR_WorkOrder_Fermer_intervention.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_WorkOrder_Fermer_intervention</fullName>
    <active>false</active>
    <description>Afficher un message d&#39;erreur s&#39;il reste encore une mission &quot;A faire&quot; lors de la femerture de l&#39;intervention</description>
    <errorConditionFormula>AND
(
ISCHANGED(Status)
,
TEXT( StatusCategory ) == &quot;Fermée&quot;
,
TECH_Nb_Missions_Open__c &gt;0
)</errorConditionFormula>
    <errorMessage>Vous ne pouvez pas fermer l&#39;intervention sans clôturer toutes les missions en cours.</errorMessage>
</ValidationRule>