unpackaged/main/default/objects/WorkOrder/listViews/Copie_de_D_pannages_en_cours_mon_Agence.listView-meta.xml
<ListView>
    <fullName>Copie_de_D_pannages_en_cours_mon_Agence</fullName>
    <columns>CreatedDate</columns>
    <columns>Agence_parc__c</columns>
    <columns>Agence_Intervenante__c</columns>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>Etape_actuelle__c</columns>
    <columns>Derniere_etape_realisee__c</columns>
    <columns>Parc_Relais__c</columns>
    <columns>Ressource_Interne__c</columns>
    <columns>Duree_Intervention__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TECH_PF_AGENCES__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Nouveau,En cours</value>
    </filters>
    <filters>
        <field>Agence_parc__c</field>
        <operation>notEqual</operation>
        <value>999-AGENCE TEST</value>
    </filters>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>WorkOrder.Depannage,WorkOrder.Depannage_Lecture_Seule,WorkOrder.Depannage_Vehicule,WorkOrder.Depannage_vehicule_Lecture_Seule</value>
    </filters>
    <label>Copie de Dépannages en cours mon Agence</label>
</ListView>