unpackaged/main/default/objects/WorkOrder/listViews/Copie_de_D_pannages_en_cours_Nuit_Ag.listView-meta.xml
<ListView>
    <fullName>Copie_de_D_pannages_en_cours_Nuit_Ag</fullName>
    <columns>CreatedDate</columns>
    <columns>Agence_parc__c</columns>
    <columns>Agence_Intervenante__c</columns>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>Etape_actuelle__c</columns>
    <columns>Derniere_etape_realisee__c</columns>
    <columns>Parc_Relais__c</columns>
    <columns>Ressource_Interne__c</columns>
    <columns>Duree_Intervention__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ressource_Interne__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>En cours</value>
    </filters>
    <filters>
        <field>Intervention_nuit__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>TECH_PF_AGENCES__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>003-Dépannages en cours  mon agence NUIT</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>