unpackaged/main/default/objects/WorkOrder/listViews/D_pannage_en_mobilit_nuit_par_r_gion.listView-meta.xml
<ListView>
    <fullName>D_pannage_en_mobilit_nuit_par_r_gion</fullName>
    <columns>CreatedDate</columns>
    <columns>Agence_parc__c</columns>
    <columns>Agence_Intervenante__c</columns>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>Etape_actuelle__c</columns>
    <columns>Derniere_etape_realisee__c</columns>
    <columns>Parc_Relais__c</columns>
    <columns>Ressource_Interne__c</columns>
    <columns>Duree_Intervention__c</columns>
    <columns>Nom_du_technicien__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ressource_Interne__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Agence_Intervenante__c</field>
        <operation>greaterThan</operation>
    </filters>
    <filters>
        <field>Agence_Intervenante__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>En cours</value>
    </filters>
    <filters>
        <field>Intervention_nuit__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>TECH_PF_REGION__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Agence_parc__c</field>
        <operation>notEqual</operation>
        <value>999 - AGENCE TEST</value>
    </filters>
    <label>004-Dépannages en cours ma région NUIT</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>